📖 Various typos and documentation updates

--- a/article.ipynb
+++ b/article.ipynb
@@ -1,11 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "230857a7",
    "metadata": {},
    "source": [
-    "# This Heading is the Article Title: La Palma Earthquakes"
+    "# La Palma Earthquakes\n",
+    "\n",
+    "> The first heading in the document is the Article Title."
    ]
   },
   {
@@ -23,6 +26,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b06862f",
    "metadata": {},
@@ -54,43 +58,24 @@
     "~~~{list-table} Recent historic eruptions on La Palma\n",
     ":header-rows: 1\n",
     ":name: history\n",
-    "\n",
     "* - Name\n",
-    "\n",
     "  - Year\n",
-    "\n",
     "* - Current\n",
-    "\n",
     "  - 2021\n",
-    "\n",
     "* - Teneguía\n",
-    "\n",
     "  - 1971\n",
-    "\n",
     "* - Nambroque\n",
-    "\n",
     "  - 1949\n",
-    "\n",
     "* - El Charco\n",
-    "\n",
     "  - 1712\n",
-    "\n",
     "* - Volcán San Antonio\n",
-    "\n",
     "  - 1677\n",
-    "\n",
     "* - Volcán San Martin\n",
-    "\n",
     "  - 1646\n",
-    "\n",
     "* - Tajuya near El Paso\n",
-    "\n",
     "  - 1585\n",
-    "\n",
     "* - Montaña Quemada\n",
-    "\n",
     "  - 1492\n",
-    "\n",
     "~~~\n",
     "\n",
     "This equates to an eruption on average every 79 years up until the 1971 event. The probability of a future eruption can be modeled by a Poisson distribution [](#poisson).\n",
@@ -115,16 +100,16 @@
     "\n",
     "## Magma Reservoirs\n",
     "\n",
-    "> You may [add citations two ways](https://myst-tools.org/docs/mystjs/citations). First, you may simply insert a markdown link link to a DOI like so: [](10.1093/nar/22.22.4673). No additional bibliographic information is required for this approach; the reference will be looked up by DOI and added implicitly to the references. Alternatively, you may provide the bibliography directly as `references.bib` bibtex file, then embed the citation by bibtex key in your text using the `cite:p` or `cite:t` for parenthetical or textual citations, respectively. The following paragraph provides an example of this. A single paper may combine both DOI and bibtex citations.\n",
+    "> You may [add citations two ways](https://myst-tools.org/docs/mystjs/citations). First, you may simply insert a markdown link link to a DOI like so: [](10.1093/nar/22.22.4673). No additional bibliographic information is required for this approach; the reference will be looked up by DOI and added implicitly to the references. Alternatively, you may provide the bibliography directly as `references.bib` BibTeX file, then embed the citation by BibTeX key in your text using the `cite:p` or `cite:t` for parenthetical or textual citations, respectively. The following paragraph provides an example of this. A single paper may combine both DOI and BibTeX citations.\n",
     "\n",
-    "Studies of the magma systems feeding the volcano, such as {cite:p}`article` has proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth).\n",
+    "Studies of the magma systems feeding the volcano, such as {cite:p}`marrero2019` has proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth).\n",
     "\n",
     "```{figure} images/reservoirs.png\n",
     ":name: reservoirs\n",
     ":align: center\n",
     ":width: 100%\n",
     "\n",
-    "Proposed model from Marrero et al\n",
+    "Proposed model from {cite:t}`marrero2019`\n",
     "```\n",
     "\n",
     "In this paper, we look at recent seismicity data to see if we can see evidence of such a system action, see [Figure %s](#reservoirs).\n"
@@ -796,13 +781,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f0774682",
    "metadata": {},
    "source": [
     "# Conclusions\n",
     "\n",
-    "From the analysis of the earthquake data collected and published by IGN for the period of 11 September through to 9 November 2021. Visualization of the earthquake events at different depths appears to confirm the presence of both mantle and crustal reservoirs as proposed by {cite:t}`article`."
+    "From the analysis of the earthquake data collected and published by IGN for the period of 11 September through to 9 November 2021. Visualization of the earthquake events at different depths appears to confirm the presence of both mantle and crustal reservoirs as proposed by {cite:t}`marrero2019`."
    ]
   },
   {
