--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-@article{article,
+@article{marrero2019,
   author = {Marrero, Jos{\' e} and Garc{\' i}a, Alicia and Berrocoso, Manuel and Llinares, {\' A}ngeles and Rodr{\' i}guez-Losada, Antonio and Ortiz, R.},
   journal = {Journal of Applied Volcanology},
   year = {2019},
