--- a/article.ipynb
+++ b/article.ipynb
@@ -75,20 +75,20 @@
     "\n",
     ": Recent historic eruptions on La Palma {#tbl-history}\n",
     "\n",
-    "This equates to an eruption on average every 79 years up until the 1971 event. The probability of a future eruption can be modeled by a Poisson distribution @poisson.\n",
+    "This equates to an eruption on average every 79 years up until the 1971 event. The probability of a future eruption can be modeled by a Poisson distribution @eq-poission.\n",
     "\n",
     "> Numbered equations may be defined using the [math directive or in line](https://myst-tools.org/docs/mystjs/math). Equations defined with the math directive may be reference in the text by label.\n",
     "\n",
     "$$\n",
     "p(x)=\\frac{e^{-\\lambda} \\lambda^{x}}{x !}\n",
-    "$$ {#poisson}\n",
+    "$$ {#eq-poisson}\n",
     "\n",
     "\n",
     "Where $\\lambda$ is the number of eruptions per year, $\\lambda=\\frac{1}{79}$ in this case. The probability of a future eruption in the next $t$ years can be calculated by:\n",
     "\n",
     "$$\n",
     "p_e = 1-\\mathrm{e}^{-t \\lambda}\n",
-    "$$ {#probability}\n",
+    "$$ {#eq-probability}\n",
     "\n",
     "So following the 1971 eruption the probability of an eruption in the following 50 years — the period ending this year — was 0.469. After the event, the number of eruptions per year moves to $\\lambda=\\frac{1}{75}$ and the probability of a further eruption within the next 50 years (2022-2071) rises to 0.487 and in the next 100 years, this rises again to 0.736.\n",
     "\n",
@@ -98,9 +98,9 @@
     "\n",
     "Studies of the magma systems feeding the volcano, such as [@marrero2019] has proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth).\n",
     "\n",
-    "![Proposed model from @marrero2019](images/reservoirs.png){#fig-resevoirs align=center width=100%}\n",
+    "![Proposed model from @marrero2019](images/reservoirs.png){#fig-reservoirs align=center width=100%}\n",
     "\n",
-    "In this paper, we look at recent seismicity data to see if we can see evidence of such a system action, see @reservoirs.\n"
+    "In this paper, we look at recent seismicity data to see if we can see evidence of such a system action, see @fig-reservoirs.\n"
    ]
   },
   {
