really fix xref

--- a/article.ipynb
+++ b/article.ipynb
@@ -75,7 +75,7 @@
     "\n",
     ": Recent historic eruptions on La Palma {#tbl-history}\n",
     "\n",
-    "This equates to an eruption on average every 79 years up until the 1971 event. The probability of a future eruption can be modeled by a Poisson distribution @eq-poission.\n",
+    "This equates to an eruption on average every 79 years up until the 1971 event. The probability of a future eruption can be modeled by a Poisson distribution @eq-poisson.\n",
     "\n",
     "> Numbered equations may be defined using the [math directive or in line](https://myst-tools.org/docs/mystjs/math). Equations defined with the math directive may be reference in the text by label.\n",
     "\n",
