add docx output

--- a/article.ipynb
+++ b/article.ipynb
@@ -35,6 +35,7 @@
     "format:\n",
     "  html: default\n",
     "  agu-pdf: default\n",
+    "  docx: default\n",
     "  jats: default\n",
     "bibliography: references.bib\n",
     "\n",
