--- a/article.ipynb
+++ b/article.ipynb
@@ -33,7 +33,8 @@
     "    - Earthquakes\n",
     "date: 2022-05-11\n",
     "format:\n",
-    "  html: default\n",
+    "  html:\n",
+    "    toc: true\n",
     "  agu-pdf: default\n",
     "  docx: default\n",
     "  jats: default\n",
