--- a/article.ipynb
+++ b/article.ipynb
@@ -27,7 +27,7 @@
     "      - Curvenote\n",
     "abstract: | \n",
     "  In September 2021, a significant jump in seismic activity on the island of La Palma (Canary Islands, Spain) signaled the start of a volcanic crisis that still continues at the time of writing. Earthquake data is continually collected and published by the Instituto Geográphico Nacional (IGN). We have created an accessible dataset from this and completed preliminary data analysis which shows seismicity originating at two distinct depths, consistent with the model of a two reservoir system feeding the currently very active volcano.\n",
-    "license: CC-BY-SA-4.0\n",
+    "license: CC-BY-SA\n",
     "keywords:\n",
     "    - La Palma\n",
     "    - Earthquakes\n",
