--- a/article.ipynb
+++ b/article.ipynb
@@ -38,6 +38,11 @@
     "  agu-pdf: default\n",
     "  docx: default\n",
     "  jats: default\n",
+    "citation:\n",
+    "  container-title: Journal of Notebooks Now!\n",
+    "execute:\n",
+    "  echo: false\n",
+    "  warning: false\n",
     "bibliography: references.bib\n",
     "\n",
     "---"
@@ -48,7 +53,7 @@
    "id": "8b06862f",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "\n",
     "> The content of your notebook may be broken into any number of markdown or code cells. Markdown cells use MyST markdown and support [standard markdown typography](https://myst-tools.org/docs/mystjs/typography) and many [directives and roles](https://myst-tools.org/docs/mystjs/syntax-overview) for figures, tables, equations, etc.\n",
     "\n",
@@ -58,7 +63,7 @@
     "\n",
     "La Palma has been constructed by various phases of volcanism, the most recent and currently active being the *Cumbre Vieja* volcano, a north-south volcanic ridge that constitutes the southern half of the island.\n",
     "\n",
-    "## Eruption History\n",
+    "### Eruption History\n",
     "\n",
     "A number of eruptions were recorded since the colonization of the islands by Europeans in the late 1400s, these are summarised in @tbl-history.\n",
     "\n",
@@ -94,7 +99,7 @@
     "\n",
     "So following the 1971 eruption the probability of an eruption in the following 50 years — the period ending this year — was 0.469. After the event, the number of eruptions per year moves to $\\lambda=\\frac{1}{75}$ and the probability of a further eruption within the next 50 years (2022-2071) rises to 0.487 and in the next 100 years, this rises again to 0.736.\n",
     "\n",
-    "## Magma Reservoirs\n",
+    "### Magma Reservoirs\n",
     "\n",
     "> You may [add citations two ways](https://myst-tools.org/docs/mystjs/citations). First, you may simply insert a markdown link link to a DOI like so: [](10.1093/nar/22.22.4673). No additional bibliographic information is required for this approach; the reference will be looked up by DOI and added implicitly to the references. Alternatively, you may provide the bibliography directly as `references.bib` BibTeX file, then embed the citation by BibTeX key in your text using the `cite:p` or `cite:t` for parenthetical or textual citations, respectively. The following paragraph provides an example of this. A single paper may combine both DOI and BibTeX citations.\n",
     "\n",
@@ -110,7 +115,7 @@
    "id": "1c7a031d",
    "metadata": {},
    "source": [
-    "# Dataset\n",
+    "## Dataset\n",
     "\n",
     "> All data used in the notebook should be present in the `data/` folder so notebooks may be executed in place with no additional input.\n",
     "\n",
@@ -130,14 +135,14 @@
     }
    },
    "source": [
-    "## Main Timeline Figure\n",
+    "### Main Timeline Figure\n",
     "\n",
     "> Code cells may be seamlessly interleaved with markdown cells. Currently, with a single-article submission, code cannot be hidden in the output document."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "184d6123",
    "metadata": {
     "iooxa": {
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "76706a81",
    "metadata": {
     "iooxa": {
@@ -205,7 +210,7 @@
     }
    },
    "source": [
-    "## Visualising Long term earthquake data\n",
+    "### Visualising Long term earthquake data\n",
     "\n",
     "Data taken directly from the IGN Catalog\n",
     "\n",
@@ -214,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d4f84df5",
    "metadata": {
     "iooxa": {
@@ -382,15 +387,13 @@
        "4            Shallow (<18km)    1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#| label: tbl-preview\n",
-    "#| tbl-cap: A preview of raw long term data.\n",
-    "\n",
+    "#| output: false\n",
     "df_ign = pd.read_csv('./data/lapalma_ign.csv')\n",
     "df_ign = make_category_columns(df_ign)\n",
     "df_ign.head()"
@@ -398,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "41ccbc48",
    "metadata": {
     "iooxa": {
@@ -433,19 +436,20 @@
        "Name: DateTime, Length: 12470, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#| output: false\n",
     "df_ign['DateTime'] = pd.to_datetime(df_ign['Date'] + ' ' + df_ign['Local time(*)'])\n",
     "df_ign['DateTime']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "a3816f99",
    "metadata": {
     "iooxa": {
@@ -477,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "9bd70552",
    "metadata": {
     "iooxa": {
@@ -554,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "d7910f53",
    "metadata": {
     "iooxa": {
@@ -681,12 +685,12 @@
     }
    },
    "source": [
-    "## Cumulative Distrubtion Plots"
+    "### Cumulative Distribution Plots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "d0ea08d9",
    "metadata": {
     "iooxa": {
@@ -724,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "7609bbb1",
    "metadata": {
     "iooxa": {
@@ -774,7 +778,7 @@
    "id": "a8eb85c8",
    "metadata": {},
    "source": [
-    "# Results\n",
+    "## Results\n",
     "\n",
     "The dataset was loaded into this Jupyter notebook and filtered down to La Palma events only. This results in 5465 data points which we then visualized to understand their distributions spatially, by depth, by magnitude and in time.\n",
     "\n",
@@ -792,7 +796,7 @@
    "id": "f0774682",
    "metadata": {},
    "source": [
-    "# Conclusions\n",
+    "## Conclusions\n",
     "\n",
     "From the analysis of the earthquake data collected and published by IGN for the period of 11 September through to 9 November 2021. Visualization of the earthquake events at different depths appears to confirm the presence of both mantle and crustal reservoirs as proposed by {cite:t}`marrero2019`."
    ]
@@ -801,13 +805,30 @@
    "cell_type": "markdown",
    "id": "e445a1b1",
    "metadata": {
-    "part": "availability"
+    "part": "availability",
+    "tags": []
    },
    "source": [
     "> Data availability statement should be specified in a separate cell with metadata `\"part\": \"availability\"`, similar to the abstract.\n",
     "\n",
     "A web scraping script was developed to pull data into a machine-readable form for analysis. That code tool [is available on GitHub](https://github.com/stevejpurves/ign-earthquake-data) along with a copy of recently updated data."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1aaf818-8e62-4ac1-89a8-571c2a3e172a",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4bfa67b-60f8-45e7-98f3-adf282f9435a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
