--- a/article.ipynb
+++ b/article.ipynb
@@ -55,8 +55,6 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "> The content of your notebook may be broken into any number of markdown or code cells. Markdown cells use MyST markdown and support [standard markdown typography](https://myst-tools.org/docs/mystjs/typography) and many [directives and roles](https://myst-tools.org/docs/mystjs/syntax-overview) for figures, tables, equations, etc.\n",
-    "\n",
     "La Palma is one of the west most islands in the Volcanic Archipelago of the Canary Islands, a Spanish territory situated is the Atlantic Ocean where at their closest point are 100km from the African coast @fig-map. The island is one of the youngest, remains active and is still in the island forming stage.\n",
     "\n",
     "![Map of La Palma in the Canary Islands. Image credit [NordNordWest](https://commons.wikimedia.org/w/index.php?curid=76638603)](images/la-palma-map.png){#fig-map width=100% align=center}\n",
@@ -66,8 +64,6 @@
     "### Eruption History\n",
     "\n",
     "A number of eruptions were recorded since the colonization of the islands by Europeans in the late 1400s, these are summarised in @tbl-history.\n",
-    "\n",
-    "> Simple tables may be created using the [list-table directive](https://myst-tools.org/docs/mystjs/tables). Similar to figures, tables may be referenced in the text by their `name`. The caption for this table is the first line of the directive.\n",
     "\n",
     "| Name      | Year |\n",
     "| ----------- | ----------- |\n",
@@ -84,8 +80,6 @@
     "\n",
     "This equates to an eruption on average every 79 years up until the 1971 event. The probability of a future eruption can be modeled by a Poisson distribution @eq-poisson.\n",
     "\n",
-    "> Numbered equations may be defined using the [math directive or in line](https://myst-tools.org/docs/mystjs/math). Equations defined with the math directive may be reference in the text by label.\n",
-    "\n",
     "$$\n",
     "p(x)=\\frac{e^{-\\lambda} \\lambda^{x}}{x !}\n",
     "$$ {#eq-poisson}\n",
@@ -101,8 +95,6 @@
     "\n",
     "### Magma Reservoirs\n",
     "\n",
-    "> You may [add citations two ways](https://myst-tools.org/docs/mystjs/citations). First, you may simply insert a markdown link link to a DOI like so: [](10.1093/nar/22.22.4673). No additional bibliographic information is required for this approach; the reference will be looked up by DOI and added implicitly to the references. Alternatively, you may provide the bibliography directly as `references.bib` BibTeX file, then embed the citation by BibTeX key in your text using the `cite:p` or `cite:t` for parenthetical or textual citations, respectively. The following paragraph provides an example of this. A single paper may combine both DOI and BibTeX citations.\n",
-    "\n",
     "Studies of the magma systems feeding the volcano, such as [@marrero2019] has proposed that there are two main magma reservoirs feeding the Cumbre Vieja volcano; one in the mantle (30-40km depth) which charges and in turn feeds a shallower crustal reservoir (10-20km depth).\n",
     "\n",
     "![Proposed model from @marrero2019](images/reservoirs.png){#fig-reservoirs align=center width=100%}\n",
@@ -116,8 +108,6 @@
    "metadata": {},
    "source": [
     "## Dataset\n",
-    "\n",
-    "> All data used in the notebook should be present in the `data/` folder so notebooks may be executed in place with no additional input.\n",
     "\n",
     "The earthquake dataset used in our analysis was generated from the [IGN web portal](https://www.ign.es/web/resources/volcanologia/tproximos/canarias.html) this is public data released under a permissive license. Data recorded using the network of Seismic Monitoring Stations on the island. A web scraping script was developed to pull data into a machine-readable form for analysis. That code tool [is available on GitHub](https://github.com/stevejpurves/ign-earthquake-data) along with a copy of recently updated data."
    ]
@@ -135,9 +125,7 @@
     }
    },
    "source": [
-    "### Main Timeline Figure\n",
-    "\n",
-    "> Code cells may be seamlessly interleaved with markdown cells. Currently, with a single-article submission, code cannot be hidden in the output document."
+    "### Main Timeline Figure\n"
    ]
   },
   {
@@ -212,9 +200,7 @@
    "source": [
     "### Visualising Long term earthquake data\n",
     "\n",
-    "Data taken directly from the IGN Catalog\n",
-    "\n",
-    "> Supported cell outputs below include `pandas` dataframe, raw text output, `matplotlib` plot, and `seaborn` plot."
+    "Data taken directly from the IGN Catalog"
    ]
   },
   {
@@ -809,7 +795,6 @@
     "tags": []
    },
    "source": [
-    "> Data availability statement should be specified in a separate cell with metadata `\"part\": \"availability\"`, similar to the abstract.\n",
     "\n",
     "A web scraping script was developed to pull data into a machine-readable form for analysis. That code tool [is available on GitHub](https://github.com/stevejpurves/ign-earthquake-data) along with a copy of recently updated data."
    ]
